# ProtOS

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  premake5.lua
ProtOS/src/: PCH.h  ProtOS.cpp
ProtOS/src/Core/: Application.cpp  Application.h  Config.cpp  Config.h  Log.cpp  Log.h  Timestep.h
ProtOS/src/REST/Component/: App.h  Swagger.h
ProtOS/src/REST/Controller/: Face.h  Static.h
ProtOS/src/REST/DTO/: Face.h  Status.h
ProtOS/src/Screens/: Screen.cpp  Screen.h
ProtOS/src/Screens/ScreenType/: ScreenImage.cpp  ScreenImage.h
ProtOS/src/Screens/Type/: Image.cpp  Image.h  Text.cpp  Text.h
config/: booting.json  faces.json
src/: Application.cpp  Application.h  PCH.h  ProtOS.cpp  Screen.cpp  Screen.h
src/Core/: Application.cpp  Application.h  Log.cpp  Log.h
src/ScreenType/: IScreenType.h  ScreenImage.h
src/Screens/: Screen.cpp  Screen.h
src/Screens/ScreenType/: IScreenType.h  ScreenImage.cpp  ScreenImage.h
